2012-11-16  Tony Chang  <tony@chromium.org>

        Remove ENABLE_CSS_HIERARCHIES since it's no longer in use
        https://bugs.webkit.org/show_bug.cgi?id=102554

        Reviewed by Andreas Kling.

        As mentioned in https://bugs.webkit.org/show_bug.cgi?id=79939#c41 ,
        we're going to revist this feature once additional vendor support is
        achieved.

        * Scripts/webkitperl/FeatureList.pm:

2012-11-16  Jochen Eisinger  <jochen@chromium.org>

        [chromium] move stubs from DRTTestRunner to TestRunner
        https://bugs.webkit.org/show_bug.cgi?id=102489

        Reviewed by Adam Barth.

        This is part of moving all methods from DRTTestRunner to TestRunner.
        Instead of keeping one stub per method, I'm using a shared stub to
        clean up the code.

        * DumpRenderTree/chromium/DRTTestRunner.cpp:
        (DRTTestRunner::DRTTestRunner):
        * DumpRenderTree/chromium/DRTTestRunner.h:
        (DRTTestRunner):
        * DumpRenderTree/chromium/TestRunner/src/TestRunner.cpp:
        (WebTestRunner::TestRunner::TestRunner):
        (WebTestRunner):
        (WebTestRunner::TestRunner::fallbackMethod):
        (WebTestRunner::TestRunner::notImplemented):
        * DumpRenderTree/chromium/TestRunner/src/TestRunner.h:
        (WebTestRunner):
        (TestRunner):
        (WebTestRunner::TestRunner::setDelegate):
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::createMainWindow):
        (TestShell::~TestShell):

2012-11-16  Jochen Eisinger  <jochen@chromium.org>

        [chromium] fake drag drop operations in the WebTestProxyBase instead of the WebViewHost
        https://bugs.webkit.org/show_bug.cgi?id=102495

        Reviewed by Adam Barth.

        When a drag operation is initiated in a layout test, we need to
        simulate a corresponding drop event, otherwise the WebViewImpl will sit
        there waiting for it. Instead of having the embedder taking care of